feat: add CRUD movies for AMIN
