# docs/openAPI.yml
@@ -133,6 +133,48 @@ paths:
                     poster:
                       type: string
 
+  /api/movies/{id}:
+    get:
+      summary: Obtener Detalles de una Película
+      description: Devuelve los detalles de una película específica.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Detalles de la película
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  title:
+                    type: string
+                  description:
+                    type: string
+                  genre:
+                    type: string
+                  poster:
+                    type: string
+                  schedules:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        date:
+                          type: string
+                        time:
+                          type: string
+        '404':
+          description: Película no encontrada
+
   /api/admin/movies:
     post:
       summary: Añadir una Nueva Película
@@ -185,48 +227,7 @@ paths:
         '400':
           description: Solicitud incorrecta
 
-  /api/movies/{id}:
-    get:
-      summary: Obtener Detalles de una Película
-      description: Devuelve los detalles de una película específica.
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Detalles de la película
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  title:
-                    type: string
-                  description:
-                    type: string
-                  genre:
-                    type: string
-                  poster:
-                    type: string
-                  schedules:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        id:
-                          type: integer
-                        date:
-                          type: string
-                        time:
-                          type: string
-        '404':
-          description: Película no encontrada
-
+  /api/admin/movies/{id}:
     put:
       summary: Actualizar una Película
       description: Permite a un administrador actualizar los detalles de una película.
@@ -235,7 +236,7 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
+            type: string
       requestBody:
         required: true
         content:
@@ -243,14 +244,41 @@ paths:
             schema:
               type: object
               properties:
-                title:
+                id:
                   type: string
-                description:
+                name:
                   type: string
-                genre:
+                synopsis:
                   type: string
-                poster:
+                nationality:
                   type: string
+                qualification:
+                  type: string
+                distributor:
+                  type: string
+                trailerUrl:
+                  type: string
+                posterUrl:
+                  type: string
+                website:
+                  type: string
+                releaseDate:
+                  type: string
+                  format: date
+                duration:
+                  type: integer
+                genres:
+                  type: array
+                  items:
+                    format: string
+                languages:
+                  type: array
+                  items:
+                    format: string
+                actors:
+                  type: array
+                  items:
+                    format: string
       responses:
         '200':
           description: Película actualizada
@@ -267,7 +295,7 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
+            type: string
       responses:
         '204':
           description: Película eliminada exitosamente
